# MyPortfolio

./: README.md
deep-learning/: environment.yml  pyproject.toml
frontend/: README.md  package-lock.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/layout/: TheHeader.vue
frontend/src/components/ui/: BaseButton.vue  BaseCard.vue
frontend/src/i18n/locales/: pl.json
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  ProjectView.vue
my-poertfolio-nlp/n-grams/: n_grams.ipynb
my-portfolio/: index.html  package-lock.json
my-portfolio-frontend/: index.html  package-lock.json  package.json
my-portfolio-frontend/i18n/locales/: pl.json
my-portfolio-frontend/src/: App.vue  main.js
my-portfolio-frontend/src/assets/: main.css
my-portfolio-frontend/src/components/UI/: BaseCard.vue
my-portfolio-frontend/src/components/layout/: TheHeader.vue
my-portfolio-frontend/src/i18n/: i18n.js
my-portfolio-frontend/src/i18n/locales/: en.json  pl.json
my-portfolio-frontend/src/router/: index.js
my-portfolio-frontend/src/views/: AboutView.vue  ContactView.vue  HomeView.vue  MusicView.vue  NotFoundView.vue  ProjectView.vue  ProjectsView.vue
my-portfolio-nlp/n-grams/: n_grams.ipynb
my-portfolio-nlp/sentiment-analysis/: lstm.ipynb
my-portfolio/src/: App.vue  main.js
my-portfolio/src/components/layouts/: TheHeader.vue
my-portfolio/src/views/: HomePage.vue
