[tool.poetry]
name = "pytorch-env"
version = "0.1.0"
description = ""
authors = ["Joanna Adamczyk <joannaa251@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
